
Fixed: Issue #488: Ping test may fail.

Fixed: Issue #495: position independent CSRF cookie value.

Fixed: Issue #496: Allow overriding the Accept HTTP header

Fixed: Issue #501: check program may fail when parent service is not monitored every cycle and multiple
services depend on it.

Fixed: Issue #510: The "set ssl" options defaults had no effect on the Monit HTTPD interface.

Fixed: If the connection timed out, Monit reported incorrect error: "Resource temporarily unavailable".


Version 5.20.0

New: Add gzip compression support to the HTTP GUI.

New: Add gzip compression support for M/Monit (requires M/Monit 3.6.0 or later). Note that the first
message is always uncompressed, the compression is enabled when suitable M/Monit version is detected.

New: Issue #448: Added global "set onreboot <start | nostart | laststate>" statement which allows
to override default service startup policy ("onreboot start" by default).

New: Added new options to "set limits" statement, for setting default timeouts:
      programTimeout:    300 seconds # default timeout for check program
      stopTimeout:       30 seconds  # default timeout for service stop
      startTimeout:      30 seconds  # default timeout for service start
      restartTimeout:    30 seconds  # default timeout for service restart

New: The cpu, memory, swap, inode and space tests now allow also decimal values for percent limit.

New: Issue #457: Update HOME environment variable when executing program as other user.

Fixed: CSRF vulnerability (CVE-2016-7067). M/Monit users related note: M/Monit service actions now
require M/Monit 3.6.0 or later due to CSRF support requirement.

Fixed: Monit HTTP GUI: Listen on IPv6 interface if no address is specified (linux specific issue).

Fixed: Monit HTTP GUI: Support CIDR mask 0 as explicit allow-all IP ACL (e.g. "allow 0.0.0.0/0").

Fixed: Host header if IPv6 address is given in HTTP, APACHE-STATUS or WEBSOCKET protocol tests.
