@@ -36,6 +36,8 @@ services depend on it.
 
 Fixed: Issue #510: The "set ssl" options defaults had no effect on the Monit HTTPD interface.
 
+Fixed: Issue #515: The compression may fail of response body is empty and zlib version <= 1.2.3.
+
 Fixed: If the connection timed out, Monit reported incorrect error: "Resource temporarily unavailable".
 
 
